refactor: Improve code stability and readability
- Replace Arrays.asList to List.of
- Move variable definitions closer to where it is used
- Introduce diamond operator <>